# impress-geant4

./: .gitignore  CMakeLists.txt  README.md  impress.cc  impress.conf  impress.hh  plot_a_lot.py  plot_cryst_dump.py
data-tables/: flare-cdfs
debug-optical-basic/: CMakeLists.txt  init.mac  init_vis.mac  optDebug.cc
examples-sep22/: flare-single.csv  flat-single.csv  flat-whole.csv  nice-compton.csv  single-mono.csv
flare-data/: fix_flare_wth.py  fix_gps_c1.txt  fix_gps_c5.txt  fix_gps_m1.txt  fix_gps_m5.txt  fix_gps_x1.txt  gps_c1.txt  gps_c5.txt  gps_m1.txt  gps_m5.txt  gps_x1.txt  head_gps_x1.txt  info.txt  raw_c1.txt  raw_c5.txt  raw_m1.txt  raw_m5.txt  raw_x1.txt
helper-scripts/: common_csv.py  compare_single_effective_area.py  effa_flat_comparison.py  gaussain_to_radioactive_element.py  hist_geant_csv.py  optical_params_shared.py  read_si_energies.py  scatter_geant_csv.py
include/: AluminumProperties.hh  BerylliumProperties.hh  CMakeLists.txt  CeBr3Properties.hh  ChannelConstants.hh  HousingAlloyProperties.hh  ImpActionInitialization.hh  ImpAnalysis.hh  ImpDetectorConstruction.hh  ImpDetectorPayload.hh  ImpEnergyPicker.hh  ImpEnergyPickerMessenger.hh  ImpEventAction.hh  ImpGlobalConfigs.hh  ImpGpsConfig.hh  ImpHafxChannel.hh  ImpMaterials.hh  ImpOnlyDetectorConstruction.hh  ImpPayloadFrontPanel.hh  ImpPhysicsList.hh  ImpPrimaryGeneratorAction.hh  ImpRunAction.hh  ImpScintCrystalHit.hh  ImpScintCrystalSensitiveDetector.hh  ImpSiHit.hh  ImpSiSensitiveDetector.hh  ImpSteppingAction.hh  ImpSurfacePointPicker.hh  ImpTempLogVol.hh  ImpTrackingAction.hh  ImpTrajectory.hh  ImpVDetectorConstruction.hh  ImpVHit.hh  ImpWholeSatelliteConstruction.hh  PdmsProperties.hh  QuartzProperties.hh  SiProperties.hh  TeflonProperties.hh
macros/: Sat-Jul--2-13.59.14-2022_optical-xyz-scan.mac  ba133.mac  ba133_batch.mac  ba133_rdec.mac  ba133_rdec_batch.mac  break_gps.mac  circular_mono_run.mac  circular_mono_source.mac  co57_rdec_batch.mac  configure_gps.mac  cryst.mac  cs137.mac  cs137_batch.mac  cs137_rdec.mac  cs137_rdec_batch.mac  flare_gps.mac  flat_impress.mac  gps_30kev_pt.mac  gps_30kev_pt_batch.mac  gps_am241.mac  gps_beam_center.mac  init_gui.mac  mono_lots.mac  optical_diagnose.mac  optical_position_run.mac  optical_vary_fast.mac  optical_vary_xz.mac  optical_xyz_scan.mac  oral_60kev_mono.mac  oral_662kev_mono.mac  oral_analytical_compare_flat.mac  spie-662.mac  test.mac  test_cryst.mac  test_double_peak_150keV.mac  test_double_peak_662keV.mac  test_x1.mac  vary_10mm_opt_rect.mac  vary_40mm_rect.mac  vis.mac
scientific-references/: d2c.py
src/: CMakeLists.txt  ImpActionInitialization.cc  ImpAnalysis.cc  ImpDetectorConstruction.cc  ImpDetectorPayload.cc  ImpEnergyPicker.cc  ImpEnergyPickerMessenger.cc  ImpEventAction.cc  ImpGlobalConfigs.cc  ImpGpsConfig.cc  ImpHafxChannel.cc  ImpMaterials.cc  ImpOnlyDetectorConstruction.cc  ImpPayloadFrontPanel.cc  ImpPhysicsList.cc  ImpPrimaryGeneratorAction.cc  ImpRunAction.cc  ImpScintCrystalHit.cc  ImpScintCrystalSensitiveDetector.cc  ImpSiHit.cc  ImpSiSensitiveDetector.cc  ImpSteppingAction.cc  ImpSurfacePointPicker.cc  ImpTempLogVol.cc  (+5 more)
tests/: CMakeLists.txt  energy_picker.cc  flare_picker_test.cc  mono_flat_energy_test.cc  rand_test.cc
(+120 files in other folders)
